[project]
name = "TeamPlayer"
dynamic = ["version"]
description = "A Democratic Internet Radio Station"
authors = [
    {name = "Albert Hopkins", email = "marduk@letterboxes.org"},
]
dependencies = [
    "distutils-strtobool",
    "pylast>=1.6,<1.7",
    "python-mpd2",
    "requests",
    "tornado",
    "Django>=5.0",
    "django-haystack>=3.3.0",
    "djangorestframework>=3.14.0",
    "mutagen>=1.45.1",
    "typing-extensions>=4.9.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.rst"
[project.entry-points]
[project.entry-points."teamplayer.autofill_strategy"]
contiguous = "teamplayer.lib.autofill:auto_fill_contiguous"
mood = "teamplayer.lib.autofill:auto_fill_mood"
random = "teamplayer.lib.autofill:auto_fill_random"


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]

[tool.mypy]
plugins =["mypy_django_plugin.main", "mypy_drf_plugin.main"]
exclude = ["/migrations/"]
files = ["teamplayer"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.project.project.settings"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "coverage>=7.6.1",
    "Whoosh>=2.7.4",
    "isort>=5.10.1",
    "typos>=1.17.2",
    "mypy>=1.11.2",
    "django-stubs>=5.1.0",
    "types-requests>=2.31.0.6",
    "djangorestframework-stubs>=3.14.5",
    "pylint>=3.3.1",
    "pylint-django>=2.5.5",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.master]
load-plugins = "pylint_django,pylint.extensions.bad_builtin"
django-settings-module = "tests.project.project.settings"
bad-functions = "print"
ignore = ["/migrations/"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["missing-docstring"]

[tool.black]
skip_magic_trailing_comma = true
